feat: massive multi-language ecosystem expansion — 120+ new tools
Major coverage push across the language ecosystems beyond Ruby. Bug
fix to the positional_style mechanism plus a single batch of 120+
new top-level commands across Python, Node/JS, Rust, Go, JVM,
Haskell, OCaml, Elixir, C/C++, Crystal, Nim, Lua, Julia, and Dart.

Bug fix — positional_style bypass:
Tools using `positional_style = true` silently treated unknown
long-form flags as positional, which let deliberately-excluded
dangerous flags slip through (e.g. `asciidoctor -r evil_lib`,
`stree check --plugins=evil`, `srb tc --metrics-file=/etc/passwd`,
`fpm --edit attack`). Fix is per-TOML: drop positional_style on
flat commands and structured subs where I'd enumerated the safe
flag set and excluded specific dangerous ones. The parser
mechanism stays as-is for tools (jj, basecamp, ImageMagick) where
positional_style is the deliberate trade-off for fast-moving or
huge-flag-surface CLIs.

Tools fixed: asciidoctor and kramdown (already done previously),
plus this commit drops it on fpm (-e/--edit), stree subs
(--plugins), and srb tc (--log-output, --metrics-file,
--debug-log-file, --cache-dir, --store-state, --web-trace-file,
--statsd-host, --lsp).

New top-level commands:

Python (~30): pipx, pip-compile, pip-sync, pre-commit,
sphinx-build, sphinx-quickstart, sphinx-apidoc, mkdocs, twine,
yapf, autopep8, autoflake, pyupgrade, vulture, pyflakes,
pycodestyle, pydocstyle, cookiecutter (carve), copier (carve),
deptry, safety, http (with `https` alias for httpie), ipython
(carve), scalene (carve), py-spy (carve), kernprof (carve),
mprof, dvc (carve), alembic, hatch.

Node/JS (~33): husky, lint-staged, markdownlint-cli2,
markdownlint, typedoc, nodemon (carve), pm2 (carve), ncu,
depcruise (with `dependency-cruise` alias), rollup, vite,
esbuild, swc, webpack, parcel, tsup, prisma, drizzle-kit,
sequelize, knex, ava, tap, c8, nyc, jasmine, http-server (carve),
serve (carve), concurrently (carve), npm-run-all (with `ru